# finalProject

./: .gitignore  .prettierrc  LICENSE.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
dbbv/: __init__.py  db.py  schema.sql
dbbv/routes/: alchemy_routes.py  auth.py  files.py  helpers.py  sqlite.py  sqlite_routes.py
dbbv/static/css/: sidebar.css  sign-in.css
dbbv/static/img/: favicon.ico.old
dbbv/static/js/: queries.js  sidebar.js  sortable-table.js
dbbv/templates/: account.html  apology.html  files.html  index.html  layout.html  login.html  register.html  sidebar.html
dbbv/user_db/: user_sqlite.py
dbbv/utils/: helpers.py  query_history.py
old/: app.py
tests/: conftest.py  data.sql  sql_tests.sql  test_auth  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_files.py  test_sqlite.py
