[project]
name = "finalproject"
version = "0.1.0"
description = ""
authors = [
    {name = "emaged",email = "emieldejonghswemer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachelib (>=0.13.0,<0.14.0)",
    "flask (>=3.0.3,<4.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]
    
[tool.poetry]
packages = [
    { include = "dbbv" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "coverage (>=7.11.0,<8.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dbbv"]
